# idSweep

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  darkcurrent.py  guardleakage.py  keithley4200.py  keithley4200_autorange_patch.md  keithley590_LCR.py  keithley707a.py  main.py  parameter_matrix.py  ping_4200.py  pyproject.toml  rs_debug.md  run_all.py  run_wafer.py  sweep.py  switching_matrix.py  test_4200_read_termination.py
.claude/: settings.local.json
accretech/: API_DESIGN_DOC.md  README.md  pyproject.toml
accretech/examples/: DF.mdf  DF_reduced.mdf  run_probe_plan.py
accretech/src/accretech_prober/: __init__.py  communication.py  constants.py  controller.py  core.py  exceptions.py  parsers.py
accretech/tests/: test_core_protocol.py  test_parsers.py
core/: channel.py  engine.py  lcr_channel.py  lcr_engine.py  port.py  post_process.py  post_process_result_example.txt  report.py  series_resistance_engine.py
docs/: ARCHITECTURE.md
helper/: bus_reset.py  deep_flush.py  test.py  test_4200_range_config.py
ref/: post_process.py
results/: result_20260517_154403_wafer01_x1_y1_dev001.txt
results/wafer01/dev001_x10_y8/: result_dev001.txt
results/wafer01/dev002_x5_y1/: result_dev002.txt
results/wafer01/dev003_x4_y2/: result_dev003.txt
results/wafer01_run1/dev001_x11_y9/: result_dev001.txt
results/wafer01_run1/dev002_x10_y10/: result_dev002.txt
settings/: ParameterMatrix_DF.xlsx  ParameterMatrix_DF_andre.xlsx  capacitance.json  dark_current.json  dark_current_original.json  dark_current_series.json  guard_leakage.json  run_info.json  series_resistance.json
tests/: test_sweep_nest.py
(+142 files in other folders)
